# spectrum-old

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  server_config.json
docs/: README.md  game-architecture.md  glossary.md  system-overview.md  technology-stack.md
docs/asserts/: single-instance-overview.plantuml
rpa-tests/: .editorconfig  .python-version  README.md
src/: client.rs  main.rs
src/asserts/: banner.txt
src/game/: Cargo.toml
src/game/src/: default_game_state.rs  game_lobby.rs  game_lobby_status.rs  game_room.rs  game_room_status.rs  game_state.rs  game_state_config.rs  game_state_configuration.rs  join_game_result.rs  lib.rs  player.rs
src/network/: .gitignore  Cargo.toml  connection.rs  listener.rs  mod.rs  websocket_connection.rs  websocket_listener.rs
src/network/src/: connection.rs  lib.rs  listener.rs  listener_builder.rs  listener_configuration.rs  websocket_connection.rs  websocket_listener.rs
src/network/tests/: common.rs  websocket_connection_tests.rs  websocket_listener_tests.rs
src/packet/: Cargo.toml  build.rs  packet_serializer.rs  protobuf_packet_serializer.rs
src/packet/src/: client_helper.rs  client_message_packet_serializer.rs  lib.rs  model.rs  packet_serializer.rs  protobuf_packet_serializer.rs  server_helper.rs  server_message_packet_serializer.rs
src/packet/src/protobuf/: client-message.proto  server-message.proto
src/server/: Cargo.toml
src/server/src/: client.rs  lib.rs  server.rs  server_config.rs  util.rs
src/server/src/server/: client_map_key.rs  mod.rs  server_util.rs
