[package]
name = "spectrum"
version = "0.1.0"
authors = ["Kamil Rusin"]
edition = "2021"
publish = false

[workspace]
members = [
    "src/network",
    "src/packet",
    "src/server",
]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
ctrlc = "3.2"
fern = "0.6"
log = "0.4"
spectrum-server = { path = "src/server" }
tokio = { version = "1.20", features = ["macros"] }
