[package]
name = "spectrum"
version = "0.1.0"
authors = ["Kamil Rusin"]
edition = "2021"
publish = false

[workspace]
members = [
    "src/game",
    "src/network",
    "src/packet",
    "src/server",
]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
fern = "0.6"
futures-util = "0.3"
log = "0.4"
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
spectrum-server = { path = "src/server" }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
