[package]
name = "spectrum-game"
version = "0.1.0"
authors = ["Kamil Rusin"]
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
dashmap = "5.3"
log = "0.4"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.20", features = ["sync", "time"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
spectrum-packet = { path = "../packet" }

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "sync", "time"] }
